<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Nuppin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_save">Salvar</string>
    <string name="action_delete">Deletar</string>
    <string name="erro_local">Você deve habilitar as permissões para utilizar o aplicativo.</string>
    <string name="pedidos">Pedidos</string>
    <string name="v_ellipsis">&#8942;</string>
    <string name="h_ellipsis">&#8943;</string>
    <string name="dot">&#183;</string>
    <string name="joined_address">%1$s, %2$s - %3$s, %4$s - %5$s</string>
    <string name="error">Houve algum erro de conexão</string>
    <string name="location_error">Houve um erro ao pegar sua localização</string>
    <string name="turn_gps_on">Ative o GPS</string>
    <string name="endereco_toolbar">Endereços</string>
    <string name="btnSalvar">Salvar</string>
    <string name="carrinho_toolbar">Carrinho</string>
    <string name="money_off">%1$s OFF</string>
    <string name="percent_off">%1$d %% OFF</string>
    <string name="cart_warning_location" tools:ignore="Typos">Essa loja não esta disponível no momento</string>
    <string name="selecione_metodo_pagamento">Selecione o método de pagamento</string>
    <string name="alimentos_apena_loja_aberta">Só é possível comprar alimentos em lojas abertas</string>
    <string name="btnOkDialog">OK</string>
    <string name="loja_fechada">Loja Fechada</string>
    <string name="btnAlterar">Alterar</string>
    <string name="btnAdicionar">Adicionar</string>
    <string name="qtd_coupon_disponivel">%1$d cupom disponível</string>
    <string name="qtd_cupons_disponiveis">%1$d cupons disponíveis</string>
    <string name="text_coupon_discount">%1s de desconto</string>
    <string name="retirada">Retirada</string>
    <string name="scheduling">Agendamento</string>
    <string name="scheduling_delivery">Atendimento delivery</string>
    <string name="novo">Novo!</string>
    <string name="loja_adapter_time_and_delivery_value">%1$s min • %2$s</string>
    <string name="loja_adapter_time_and_delivery_value_gratis">%1$s min • Grátis</string>
    <string name="loja_adapter_dot_string">‌‌ • %1$s •‌‌‌‌&#160;</string>
    <string name="pedido_aguardando_aprovacao">Aguardando aprovação</string>
    <string name="pedido_em_preparo">Pedido em preparo</string>
    <string name="pedido_em_separacao">Pedido em separação</string>
    <string name="pedido_saiu_entrega">Saiu para entrega</string>
    <string name="pedido_entregue">Pedido entregue</string>
    <string name="pedido_cancelado">Pedido Cancelado</string>
    <string name="alimentos">Alimentos</string>
    <string name="produtos">Produtos</string>
    <string name="service">Serviços</string>
    <string name="detalhe_toolbar">Detalhe</string>
    <string name="endereco_entrega">Endereço de entrega</string>
    <string name="endereco_retirada">Endereço de retirada</string>
    <string name="avaliado">Avaliado</string>
    <string name="produto_indisponivel">Indisponível</string>
    <string name="possui_compra_em_outra_loja">Você já possui compras em outra loja</string>
    <string name="carrinho_atualizado">Carrinho Atualizado</string>
    <string name="adicionado_ao_carrinho">Adicionado ao Carrinho</string>
    <string name="btn_atualizar">Atualizar</string>
    <string name="adicionado_ao_novo_carrinho">Adicionado ao novo carrinho</string>
    <string name="duracao_servico">Duração: %1$d min •&#160;</string>
    <string name="scheduling_reservado">Agendamento reservado</string>
    <string name="concluido">Concluído</string>
    <string name="scheduling_cancelado">Agendamento Cancelado</string>
    <string name="time_with_dots">%1$s • %2$s</string>
    <string name="rating_and_num_rating">%1$s • %2$d</string>
    <string name="esgotado">ESGOTADO</string>
    <string name="coupon_toolbar">Cupons</string>
    <string name="scheduling_toolbar">Agendamento</string>
    <string name="empty_coupon">Nenhum cupom disponivel</string>
    <string name="empty_coupon_sub">Fique atento porque os cupons tem prazo para expirar</string>
    <string name="warning_before_rating">Você ainda não avaliou</string>
    <string name="horarios">Horários</string>
    <string name="invalid_email">Email invalido</string>
    <string name="error_enabled_text">Preencha este campo</string>
    <string name="invalid_name">Nome invalido</string>
    <string name="cpf_invalido">CPF invalido</string>
    <string name="error_photo">Problemas ao salvar a foto</string>
    <string name="email_exist">Email já cadastrado</string>
    <string name="upload_error">Problemas ao efetuar o upload</string>
    <string name="perfil_toolbar">Perfil</string>
    <string name="cpf_exist">CPF já cadastrado</string>
    <string name="pedido_minimo_cupom_aviso">O pedido mínimo para este cupom é %1$s</string>
    <string name="pedido_minimo_cupom">Pedido mínimo: %1$s</string>
    <string name="pedido_retirado">Pedido Retirado</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="permission_denied">Permissão necessária para funcionar</string>
    <string name="whatsapp_not_found">WhatsApp não instalado</string>
    <string name="send_error">Erro ao enviar</string>
    <string name="invalid_code">Código Invalido</string>
    <string name="wrong_code">Código Errado</string>
    <string name="exp_code">Código Expirado</string>
    <string name="code_sent">Código Enviado</string>
    <string name="email_caption">( %1$s )</string>
    <string name="error_send_code">Houve algum erro ao enviar o código</string>
    <string name="obs_prod">obs: %1$s</string>
    <string name="nao_compareceu">Não compareceu</string>
    <string name="invalid_numero">Numero Invalido</string>
    <string name="empty_chat">Nenhuma Conversa</string>
    <string name="empty_chatroom_sub">Inicie uma conversa agora mesmo</string>
    <string name="pedido">Pedido: %1$s</string>
    <string name="liberado_retirada">Liberado para retirada</string>
    <string name="endereco_nao_encontrado">Endereço não encontrado</string>
    <string name="erro_layout_sub">Houve algum erro, tente novamente!</string>
    <string name="limpar_carrinho">Limpar Carrinho</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="revisar">Revisar</string>
    <string name="estabelecimento_sem_horario">Estabelecimento sem horário definido</string>
    <string name="estabelecimento_sem_descricao">Estabelecimento sem descrição</string>
    <string name="descricao">Descrição</string>
    <string name="troco">Vai precisar de troco?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="phone_number_exist">Numero de telefone já cadastrado</string>
    <string name="troco_detail">Troco pra quanto?</string>
    <string name="sem_historico_pedidos">Sem histórico de pedidos</string>
    <string name="sem_historico_pedidos_sub">Você ainda não fez nenhum pedido dessa categoria</string>
    <string name="carrinho">carrinho</string>
    <string name="sem_produtos">Nada aqui..</string>
    <string name="sem_produtos_sub">Essa loja ainda está sem produtos</string>
    <string name="sem_horario_disponivel">Sem horário disponível</string>
    <string name="adicionar">ADICIONAR</string>
    <string name="servico">Serviço</string>
    <string name="endereco_atendimento">Endereço de atendimento</string>
    <string name="forma_pagamento">FORMA DE PAGAMENTO</string>
    <string name="subtotal">Subtotal</string>
    <string name="desconto">Desconto</string>
    <string name="total">Total</string>
    <string name="agendar">Agendar</string>
    <string name="chat">Chat</string>
    <string name="is_cancelar">Cancelar?</string>
    <string name="avaliar">AVALIAR</string>
    <string name="termos_de_uso">Termos de uso</string>
    <string name="fechado">FECHADO</string>
    <string name="mensagem_lida">Lida</string>
    <string name="qual_seu_email">Qual seu email?</string>
    <string name="qual_seu_email_sub">Será o email pelo qual entraremos em contato, recebera informações sobre sua conta e pedidos</string>
    <string name="continuar">CONTINUAR</string>
    <string name="intro_text">Como gostaria de entrar?</string>
    <string name="email">Email</string>
    <string name="celular">Celular</string>
    <string name="alguma_observacao">Alguma observação?</string>
    <string name="_1">1</string>
    <string name="qual_numero_celular">Qual o número do seu celular?</string>
    <string name="qual_numero_celular_sub">Será o número para o qual enviaremos o código de confirmação via SMS</string>
    <string name="detalhes_endereco">Detalhes do endereço</string>
    <string name="detalhes_endereco_sub">Preencha/corrija os campos necessários para cadastrar o endereço</string>
    <string name="no_company_text_sub">Mas estamos trabalhando para aumentar nossa área de atendimento</string>
    <string name="comunidade">Comunidade</string>
    <string name="comunidade_sub">Nos ajude a crescer a comunidade indicando lugares que você gostaria de ver por aqui</string>
    <string name="indicar">Indicar</string>
    <string name="compartilhe">Compartilhe</string>
    <string name="compartilhe_sub">Tem contato com pessoas que se interessariam em conhecer melhor e começar seus negócios por aqui? Compartilhe nosso link com eles</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_sub">Nos ajude a melhorar a plataforma, nos de um feedback do que podemos melhorar</string>
    <string name="aguarde">Aguarde..</string>
    <string name="alterar_imagem">Alterar Imagem</string>
    <string name="digite_codigo_email">Digite o código que recebeu em seu email</string>
    <string name="digite_codigo_sms">Digite o código que enviamos para o seu numero</string>
    <string name="digite_codigo_sms_sub">Pode demorar alguns minutos para o SMS chegar</string>
    <string name="verificar">VERIFICAR</string>
    <string name="nao_recebeu_codigo">Não recebeu o código?</string>
    <string name="ocorreu_algum_erro">Ocorreu algum erro!</string>
    <string name="ocorreu_algum_erro_sub">Não sabemos o que foi, mas pode tentar novamente</string>
    <string name="pagamento_online">Pagamento Online</string>
    <string name="pagamento_online_none">Não disponível ainda</string>
    <string name="pagamento_entrega">Pagamento na Entrega</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="suporte_chat">Suporte por chat</string>
    <string name="suporte_chat_sub">Qualquer dúvida ou problema, temos um chat que funciona 24/7 para te atender. Só clicar no ícone do WhatsApp</string>
    <string name="feedback_txt">Ideia, critica, elogio..\nFale o que quiser!</string>
    <string name="compartilhe_user_sub">Gostou do nosso app? Compartilhe com seus amigos e ajude a movimentar o comércio local</string>
    <string name="enviar_feedback">Enviar Feedback</string>
    <string name="seja_parceiro">Seja Parceiro</string>
    <string name="seja_parceiro_sub">Seja um parceiro Nuppin e comece a aproveitar as nossas vantagens</string>
    <string name="digite_codigo_email_sub">Pode demorar alguns minutos para o código chegar em seu email, verifique também na caixa de spam.</string>
    <string name="complete_cadastro">Complete seu cadastro</string>
    <string name="termos_de_uso_sub">Ao se cadastrar você confirma que concorda com os nossos termos de uso.</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="usar_minha_localizacao">Usar minha localização</string>
    <string name="escrever_endereco">Escrever endereço</string>
    <string name="historico">Histórico</string>
    <string name="nenhum_endereco">Nenhum endereço cadastrado</string>
    <string name="nenhum_endereco_sub">Cadastre seu endereço para utilizar o Nuppin</string>
</resources>