<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@color/default_color"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/tb_main_top"
        layout="@layout/toolbar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUsarLoc"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_margin="8dp"
        android:text="@string/usar_minha_localizacao"
        app:icon="@drawable/map_marker_radius_outline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_main_top" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnManual"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:icon="@drawable/ic_edit_black_12dp"
        android:fontFamily="sans-serif-light"
        app:iconTint="@color/secondary_text"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/escrever_endereco"
        android:textColor="@color/secondary_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnUsarLoc" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnManual">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtHistorico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/historico"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnUsarLoc" />

            <androidx.recyclerview.widget.RecyclerView
                        android:overScrollMode="never"
                android:id="@+id/recyclerview_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/linearEmpty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp"
                android:visibility="gone">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:srcCompat="@drawable/map_marker_circle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nenhum_endereco"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/nenhum_endereco_sub"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            </LinearLayout>


        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/dots"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_light"
            app:lottie_autoPlay="true"
            app:lottie_fileName="list_loading.json"
            app:lottie_loop="true"
            app:lottie_speed="1.25" />

    </androidx.cardview.widget.CardView>


    <include
        android:id="@+id/error_layout"
        layout="@layout/error_layout" />

    <include
        android:id="@+id/progress"
        layout="@layout/progress" />

</androidx.constraintlayout.widget.ConstraintLayout>