<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:background="@color/default_color"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="12dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="12dp"
            app:layout_constraintDimensionRatio="1.4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/txt"
            app:lottie_autoPlay="true"
            app:lottie_fileName="verified.json"
            app:lottie_loop="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complete_cadastro"
            android:gravity="center"
            android:id="@+id/txt"
            android:layout_margin="12dp"
            app:layout_constraintBottom_toTopOf="@id/editNomeT"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            />



        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintBottom_toTopOf="@id/termos"
                android:id="@+id/editNomeT"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="Nome">

                <com.google.android.material.textfield.TextInputEditText
                    android:background="@color/default_color"
                    android:id="@+id/editNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_person_pin_black_24dp"
                    android:drawablePadding="12dp"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/termos_de_uso"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
                android:id="@+id/termos"
                app:layout_constraintBottom_toTopOf="@id/termosCheckbox"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/termos_de_uso_sub"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:id="@+id/termosCheckbox"
                app:layout_constraintBottom_toTopOf="@id/criarConta"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/criarConta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/colorPrimary"
                android:text="@string/cadastrar"
                android:minHeight="?attr/actionBarSize"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    <include
        layout="@layout/progress"
        android:id="@+id/progress"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>