<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/default_color">

<androidx.constraintlayout.widget.ConstraintLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:focusable="true"
android:focusableInTouchMode="true"
android:paddingStart="12dp"
android:paddingEnd="12dp"
android:paddingTop="8dp"
android:paddingBottom="8dp">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toTopOf="@id/txt"
        app:layout_constraintDimensionRatio="1.4"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/email_outline"
        android:id="@+id/image"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qual_seu_email"
        android:id="@+id/txt"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toTopOf="@id/txtSub"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qual_seu_email_sub"
        android:id="@+id/txtSub"
        android:fontFamily="sans-serif-light"
        app:layout_constraintBottom_toTopOf="@id/editEmailT"
        android:layout_margin="12dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintBottom_toTopOf="@id/criarConta"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/editEmailT"
                android:hint="Email"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/default_color"
                    app:drawableStartCompat="@drawable/ic_email_cinza_24dp"
                    android:drawablePadding="12dp"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/criarConta"
                android:layout_width="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/continuar"
                android:minHeight="?attr/actionBarSize"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    <include
        layout="@layout/progress"
        android:id="@+id/progress"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>